# QT_TAF_METAR

./: .clang-format  CMakeLists.txt  README.md  downloader.cpp  downloader.h  forecast.cpp  forecast.h  forecast_taf.cpp  forecast_taf.h  forecast_title.cpp  forecast_title.h  function.cpp  function.h  lb_weather.cpp  lb_weather.h  main.cpp  maintaf.cpp  maintaf.h  resource.qrc  widget.cpp  widget.h  xmlparser.cpp  xmlparser.h
include/: downloader.h  forecast.h  forecast_taf.h  forecast_title.h  function.h  lb_weather.h  maintaf.h  metar.h  storage_forecast.h  taf.h  widget.h  xmlparser.h
resource/: AirportName_Dictionary.txt
source/: downloader.cpp  forecast.cpp  forecast_taf.cpp  forecast_title.cpp  function.cpp  lb_weather.cpp  main.cpp  maintaf.cpp  metar.cpp  taf.cpp  widget.cpp  xmlparser.cpp
